@@ -132,6 +132,7 @@ Bug Fixes:
     document. Issue 341.
  -- Fixed escape() which used #92 instead of backslash (Issue 353).
  -- Fix WIDTH() to default to 78 instead of 24 (Issue 354).
+ -- Open permissions on WIDTH() and HEIGHT() (Issue 356).
 
 
 Performance Enhancements:
@@ -172,3 +173,5 @@ Miscellaneous:
     precision (Issue 283).  Thanks Jake.
  -- Document @restart dropping SSL connections up front.
  -- Document report and move into walkdb.cpp (Issue 293).
+ -- Raised the default function invocation limit to 25,000 and the
+    default function recursion limit to 500 (Issue 357).
